# marsilea

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  Untitled.ipynb  custom_elements.ipynb  deformation.ipynb  demo.ipynb  dendrogram.ipynb  dot_heatmap.ipynb  grid.ipynb  heatmap.ipynb  oncoprint.ipynb  oncoprint.py  plotter.ipynb  plotter_bar.ipynb  pyproject.toml  readthedocs.yaml  setup.py  text_render.ipynb  upset.ipynb  upset_data.ipynb
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.yaml
.github/workflows/: build.yaml  deploy_streamlit.yaml  lint.yaml
.streamlit/: config.toml
app/: .gitignore  Dockerfile  Home.py  README.md  example_data.txt  requirements.txt  set_data_memberships.txt  test.xlsx  upset.xlsx  x-layout.py
app/.streamlit/: config.toml  pages.toml
app/components/: cmap_picker.py  config.py  data_input.py  dendrogram.py  example_download.py  font.py  initialize.py  layer_data.py  main_plots.py  memo_widget.py  nested_columns.py  resource.py  saver.py  side_plots.py  state.py  transformation.py  upset_example.csv
app/components/cmap_selector/: __init__.py  selector.py
app/pages/: 01 Simple_Heatmap.py  01 🟨 Simple_Heatmap.py  02 Cross-Layout_Heatmap.py  02 X-Layout_Heatmap.py  02 🍱 X-Layout_Heatmap.py  03 Upsetplot.py  03 🕸️ Upsetplot.py  04 Manual.py  04 📚 Manual.py  Manual.py  Simple_Heatmap.py  Upsetplot.py  X-Layout-New.py  grid.py  upset.py  x-layout.py  🍱 X-Layout_Heatmap.py  📚 Manual.py  🟨 Simple_Heatmap.py  🪢 Upsetplot.py
app/script/: heatmap_data.py  plot_layer_example_images.py  plotter_example_images.py
app/test_data/: Stats_plot.txt  example_data.txt  number.txt  row_labels.txt
data/: IMDB.csv  PATIENT_DATA_oncoprint.tsv
docs/: .gitignore  Makefile  README.md  clean_up.py  requirements.txt
docs/examples/: .gitignore
docs/examples/Basics/: plot_adv_heatmap.py  plot_heatmap.py  plot_stacked_bar.py  plot_two_heatmap.py
docs/examples/Gallery/: README.rst  plot_arc_diagram.py  plot_available_plotters.py  plot_bivariate_dist.py  plot_mouse_embryo.py  plot_oil_well.py  plot_oncoprint.py  plot_pbmc3k.py  plot_sc_multiomics.py  plot_seqalign.py  plot_stacked_bar.py  plot_tiobe_index.py  plot_tracks.py  plot_upset.py
docs/examples/Plotters/: README.rst  plot_anno_labels.py  plot_arc.py  plot_area.py  plot_bar.py  plot_box.py  plot_boxen.py  plot_center_bar.py  plot_chunk.py  plot_color_mesh.py  plot_colors.py  plot_emoji.py  plot_fixed_chunk.py  plot_image.py  plot_labels.py  plot_marker_mesh.py  plot_numbers.py  plot_point.py  plot_range.py  plot_seq_logo.py  plot_sized_mesh.py  plot_stack_bar.py  plot_strip.py  plot_swarm.py  plot_text_mesh.py  plot_title.py  plot_violin.py
docs/how_to/: README.rst
docs/how_to/customization/: README.rst  plot_add_border.py  (+1 more)
docs/source/: .gitignore  api.rst  conf.py  how-to.rst  index.rst  installation.rst  sg_execution_times.rst
examples/: README.rst  plot_arc_diagram.py  plot_available_plotters.py  plot_bivariate_dist.py  plot_mouse_embryo.py  plot_oil_well.py  plot_oncoprint.py  plot_pbmc3k.py  plot_sc_multiomics.py  plot_seqalign.py  plot_stacked_bar.py  plot_upset.py
heatgraphy/: __init__.py  _api.py  _deform.py  _legend.py  _planner.py  _plotter.py  base.py  dataset.py  dendrogram.py  exceptions.py  heatmap.py  layers.py  layout.py  upset.py  utils.py
heatgraphy/_plotter/: __init__.py  _base.py  anno_label.py  bar.py  chunk.py  label.py  mesh.py  stripe.py
heatgraphy/plotter/: __init__.py  _seaborn.py  bar.py  base.py  chunk.py  mesh.py  text.py
marsilea/: __init__.py  _deform.py  base.py  dataset.py  dendrogram.py  heatmap.py  layers.py  layout.py  upset.py  utils.py
marsilea/plotter/: __init__.py  _images.py  _seaborn.py  _utils.py  arc.py  bar.py  base.py  bio.py  images.py  mesh.py  text.py
oncoprinter/: __init__.py  _renderplan.py  core.py  preset.py
scripts/: logo.py  pub_figure.py  x-layout.py
scripts/benchmark/: marsilea_cooking_oils.py  result.py
scripts/example_figures/: arc-diagrams.py  cooking_oils.py  mouse_map.py  msa.py  oncoprint.py  single-heatmap.py  tracks.py  two-heatmap.py  upset.py  violin_swarm.py
scripts/pub_figures/: bivariate_kde.py  layout-skeleton-step.py  layout-step.py  onco.py  stacked_bar.py  upset.py
src/marsilea/: __init__.py  _api.py  _deform.py  base.py  dataset.py  dendrogram.py  exceptions.py  heatmap.py  layers.py  layout.py  types.py  upset.py  utils.py
src/onco/: __init__.py
src/oncoprinter/: __init__.py  core.py  preset.py
tests/: conftest.py  test_board_ops.py  test_composite.py  test_data_input.py  test_deform.py  test_dendrogram.py  test_layers.py  test_mesh.py  test_plotter.py  test_plotters_smoke.py  test_upset.py  test_utils.py
(+95 files in other folders)
